--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img class="logo text-center" src="assets/images/logo.png" alt="Crystal Collector logo">
 
 				<p> You will be given a random number at the start of the game.<br>
-				By clicking on any four of the crystals below you wil add a specific aount of points to your total score.
+				By clicking on any four of the crystals below you will add a specific amount of points to your total score.
 				</p>
 			</div>
 		</div>
@@ -28,10 +28,10 @@
 				<div id="totalscore">Total Score: </div>
 			</div>
 			<div class="col-xs-4">
-				<div id="wins">Wins: </div>
+				<div class="wins">Wins: </div>
 			</div>
 			<div class="col-xs-4">
-				<div id="losses">Losses: </div>
+				<div class="losses">Losses: </div>
 			</div>
 		</div>
 				
@@ -43,9 +43,9 @@
 				</div>
 				
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-xl-12">
 					<div class="numberbox">
-						<div id = "randomNumber text-center" class="col-lg-6">
+						<div id = "randomNumber text-center" class="col-lx-6">
 							<div>Match This Number:</div>
 						</div>
 					</div>
