--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 			</div>
 		</div>
 				
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="message"></div>
+			</div>
+		</div>
 				<div class="crystals">
 					<button id="green"><img src="assets/images/diamond.png" alt="green jewel" width="90" height="90"></button>
 					<button id="blue"><img src="assets/images/blue jewel.png" alt="blue jewel" width="90" height="90"></button>
@@ -46,7 +51,6 @@
 				<div class="col-xl-12">
 					<div class="numberbox">
 						<div id = "randomNumber text-center" class="col-lx-6">
-							<div>Match This Number:</div>
 						</div>
 					</div>
 				</div>
