--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	
 		<div class="row">
 			<div class="col-xs-4">
-				<div id="totalscore">Total Score: </div>
+				<div id="totalscore">Total Score: 0</div>
 			</div>
 			<div class="col-xs-4">
-				<div class="wins">Wins: </div>
+				<div class="wins">Wins: 0</div>
 			</div>
 			<div class="col-xs-4">
-				<div class="losses">Losses: </div>
+				<div class="losses">Losses: 0</div>
 			</div>
 		</div>
 				
@@ -56,7 +56,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
